--- a/pom.xml
+++ b/pom.xml
@@ -70,20 +70,20 @@
     </dependencyManagement>
 
 
-    <repositories>
-        <!--设置下载的私服-->
-        <repository>
-            <id>Nexus</id>
-            <name>node-1--Nexus</name>
-            <url>http://node-1:8081/nexus/content/groups/public/</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
+    <!--<repositories>-->
+        <!--&lt;!&ndash;设置下载的私服&ndash;&gt;-->
+        <!--<repository>-->
+            <!--<id>Nexus</id>-->
+            <!--<name>node-1&#45;&#45;Nexus</name>-->
+            <!--<url>http://node-1:8081/nexus/content/groups/public/</url>-->
+            <!--<releases>-->
+                <!--<enabled>true</enabled>-->
+            <!--</releases>-->
+            <!--<snapshots>-->
+                <!--<enabled>true</enabled>-->
+            <!--</snapshots>-->
+        <!--</repository>-->
+    <!--</repositories>-->
 
     <build>
         <plugins>
